index dan style
memisahkan style dari index

--- a/index.html
+++ b/index.html
@@ -5,71 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookApps</title>
-    <style>
-        *,body {
-            margin: 0px;
-            padding: 0px;
-        }
-        .container {
-            margin: 0px;
-            background-color: blue;
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            height: 100vh;
-        }
-
-        .container .header{
-            background-color: black;
-            border: 1px solid;
-            border-color: red;
-            border-radius: 5px;
-        }
-
-        .kanan {
-            background-color: green;
-            width: 30%;
-            flex-grow: 1;
-        }
-
-        .tengah {
-            background-color: yellow;
-            width: 30%;
-            flex-grow: 1;
-        }
-
-        .kiri {
-            background-color: aqua;
-            width: 30%;
-            flex-grow: 1;
-        }
-
-        .header {
-            background-color: red;
-            text-align: center;
-            color: white;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class="header">BookApps</h1>
+    <h1 class="header text-center">BookApps</h1>
     <div class="container">
 
         <div class="kiri">
             <!-- kanan -->
-            <h3 class="header">Belum dibaca</h3>
+            <h3 class="header text-center">Belum dibaca</h3>
 
         </div>
 
         <div class="tengah">
             <!-- tengah -->
-            <h3 class="header">Tambah Buku</h3>
+            <h3 class="header text-center">Tambah Buku</h3>
         </div>
 
         <div class="kanan">
             <!-- kiri -->
-            <h3 class="header">yang sudah dibaca</h3>
+            <h3 class="header text-center">yang sudah dibaca</h3>
         </div>
     </div>
 </body>
