--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
         <div class="kiri">
             <!-- kanan -->
-            <h3 class="header text-center">Belum dibaca</h3>
-
+            <h3 class="header text-center">Belum Dibaca</h3>
+                <div class="list-item" id="bukus">
+                
+                </div>
         </div>
 
-        <div class="tengah">
+        <div class="tengah" id="tambah-buku">
             <!-- tengah -->
             <h3 class="header text-center">Tambah Buku</h3>
             <form action="#" class="form" id="form">
@@ -38,7 +40,7 @@
 
                 <div class="form-group-read">
                     <label for="read">sudah dibaca</label>
-                    <input type="checkbox" name="read" id="read" required>
+                    <input type="checkbox" name="read" id="read">
                 </div>
 
                 <input type="submit" value="Submit" name="Submit" class="submit">
@@ -50,5 +52,8 @@
             <h3 class="header text-center">yang sudah dibaca</h3>
         </div>
     </div>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
