--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div class="kanan">
             <!-- kiri -->
             <h3 class="header text-center">yang sudah dibaca</h3>
+            <div class="list-item" id="read-bukus">
+                
+            </div>
         </div>
     </div>
 
